# pySunlight

./: .flake8  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LibrariesLicenses.md  README.md  SunlightConverter.py  SunlightResult.py  Test_WrapperImport.py  WrapperImportTest.py  build.sh  clean.sh  main.py  pySunlight.i  setup.py
datas/26_HOTEL_POLICE_LYON/3DTiles/: tileset.json
datas/26_HOTEL_POLICE_LYON/3DTiles/tiles/: 0.b3dm
datas/testing/: original.csv
datas/testing/b3dm_multiple_tileset/precomputed_aggregate/2016-10-01__0700/tiles/: 0.b3dm  1.b3dm
datas/testing/b3dm_multiple_tileset/precomputed_sunlight/2016-10-01__0700/tiles/: 0.b3dm  1.b3dm
datas/testing/b3dm_tileset/: tileset.json
datas/testing/b3dm_tileset/tiles/: 0.b3dm
docs/: Pipeline_Activity_Chart.drawio  Roadmap.md  UML_Writers.drawio
src/: .gitignore  Aggregator.py  SunlightConverter.py  SunlightResult.py  Test_IdenticalCsvExport.py  Test_WrapperImport.py  TileWrapper.py  Utils.py  __init__.py  main.py
src/Aggregators/: Aggregator.py  AggregatorController.py  __init__.py
src/Converters/: SunlightToTiler.py  TilerToSunlight.py  __init__.py
src/Writers/: CsvWriter.py  FileWriter.py  JsonWriter.py  TileWriter.py  Writer.py  __init__.py
tests/: Test_IdenticalResult.py  test_identical_result.py  test_intersection.py
wrapper/: build.sh  clean.sh  main.py  setup.py  sunlight.i
